third_party/move/move-compiler-v2/tests/uninit-use-checker/v1-borrow-tests/borrow_if.exp
============ bytecode before first stackless bytecode pipeline ================

[variant baseline]
fun <SELF>_0::main() {
     var $t0: u64
     var $t1: &u64
     var $t2: bool
     var $t3: &u64
     var $t4: bool
     var $t5: u64
     var $t6: &u64
     var $t7: u64
     var $t8: u64
  0: $t0 := 5
  1: $t2 := true
  2: if ($t2) goto 3 else goto 7
  3: label L0
  4: $t3 := borrow_local($t0)
  5: $t1 := infer($t3)
  6: goto 8
  7: label L1
  8: label L2
  9: $t6 := move($t1)
 10: $t5 := read_ref($t6)
 11: $t7 := 5
 12: $t4 := ==($t5, $t7)
 13: if ($t4) goto 14 else goto 16
 14: label L3
 15: goto 19
 16: label L4
 17: $t8 := 42
 18: abort($t8)
 19: label L5
 20: return ()
}


Diagnostics:
error: use of possibly unassigned local `ref`
  ┌─ tests/uninit-use-checker/v1-borrow-tests/borrow_if.move:8:14
  │
8 │     assert!(*move ref == 5, 42);
  │              ^^^^^^^^

============ after uninitialized_use_checker: ================

[variant baseline]
fun <SELF>_0::main() {
     var $t0: u64
     var $t1: &u64
     var $t2: bool
     var $t3: &u64
     var $t4: bool
     var $t5: u64
     var $t6: &u64
     var $t7: u64
     var $t8: u64
     # before: { no: $t0, $t1, $t2, $t3, $t4, $t5, $t6, $t7, $t8 }, after: { no: $t1, $t2, $t3, $t4, $t5, $t6, $t7, $t8 }
  0: $t0 := 5
     # before: { no: $t1, $t2, $t3, $t4, $t5, $t6, $t7, $t8 }, after: { no: $t1, $t3, $t4, $t5, $t6, $t7, $t8 }
  1: $t2 := true
     # before: { no: $t1, $t3, $t4, $t5, $t6, $t7, $t8 }, after: { no: $t1, $t3, $t4, $t5, $t6, $t7, $t8 }
  2: if ($t2) goto 3 else goto 7
     # before: { no: $t1, $t3, $t4, $t5, $t6, $t7, $t8 }, after: { no: $t1, $t3, $t4, $t5, $t6, $t7, $t8 }
  3: label L0
     # before: { no: $t1, $t3, $t4, $t5, $t6, $t7, $t8 }, after: { no: $t1, $t4, $t5, $t6, $t7, $t8 }
  4: $t3 := borrow_local($t0)
     # before: { no: $t1, $t4, $t5, $t6, $t7, $t8 }, after: { no: $t4, $t5, $t6, $t7, $t8 }
  5: $t1 := infer($t3)
     # before: { no: $t4, $t5, $t6, $t7, $t8 }, after: { no: $t4, $t5, $t6, $t7, $t8 }
  6: goto 8
     # before: { no: $t1, $t3, $t4, $t5, $t6, $t7, $t8 }, after: { no: $t1, $t3, $t4, $t5, $t6, $t7, $t8 }
  7: label L1
     # before: { no: $t4, $t5, $t6, $t7, $t8 }{ maybe: $t1, $t3 }, after: { no: $t4, $t5, $t6, $t7, $t8 }{ maybe: $t1, $t3 }
  8: label L2
     # before: { no: $t4, $t5, $t6, $t7, $t8 }{ maybe: $t1, $t3 }, after: { no: $t4, $t5, $t7, $t8 }{ maybe: $t1, $t3 }
  9: $t6 := move($t1)
     # before: { no: $t4, $t5, $t7, $t8 }{ maybe: $t1, $t3 }, after: { no: $t4, $t7, $t8 }{ maybe: $t1, $t3 }
 10: $t5 := read_ref($t6)
     # before: { no: $t4, $t7, $t8 }{ maybe: $t1, $t3 }, after: { no: $t4, $t8 }{ maybe: $t1, $t3 }
 11: $t7 := 5
     # before: { no: $t4, $t8 }{ maybe: $t1, $t3 }, after: { no: $t8 }{ maybe: $t1, $t3 }
 12: $t4 := ==($t5, $t7)
     # before: { no: $t8 }{ maybe: $t1, $t3 }, after: { no: $t8 }{ maybe: $t1, $t3 }
 13: if ($t4) goto 14 else goto 16
     # before: { no: $t8 }{ maybe: $t1, $t3 }, after: { no: $t8 }{ maybe: $t1, $t3 }
 14: label L3
     # before: { no: $t8 }{ maybe: $t1, $t3 }, after: { no: $t8 }{ maybe: $t1, $t3 }
 15: goto 19
     # before: { no: $t8 }{ maybe: $t1, $t3 }, after: { no: $t8 }{ maybe: $t1, $t3 }
 16: label L4
     # before: { no: $t8 }{ maybe: $t1, $t3 }, after: { maybe: $t1, $t3 }
 17: $t8 := 42
     # before: { maybe: $t1, $t3 }, after: { maybe: $t1, $t3 }
 18: abort($t8)
     # before: { no: $t8 }{ maybe: $t1, $t3 }, after: { no: $t8 }{ maybe: $t1, $t3 }
 19: label L5
     # before: { no: $t8 }{ maybe: $t1, $t3 }, after: { no: $t8 }{ maybe: $t1, $t3 }
 20: return ()
}
